# hacksaws

./: .gitignore  .gitlab-ci.yml  README.md  example_mfa_iam_policy.json  pyproject.toml
hacksaws/: __init__.py  _aws.py  _cli.py  _configs.py  _ecr.py
hacksaws/tests/: test_scenarios.py
hacksaws/tests/scenarios/: help.toml  mfa_login.toml  mfa_login_ecr.toml  mfa_login_no_code.toml  mfa_logout.toml  mfa_no_args.toml  mfa_no_profile.toml  no_args.toml
