[tool.poetry]
name = "hacksaws"
version = "0.1.1"
license = "MIT"
description = """\
    A command line utility for AWS profiles using dynamic authentication \
    methods such as MFA. \
    """
authors = ["Scott Ernst <swernst@gmail.com>"]
readme = "README.md"
homepage = "https://gitlab.com/rocket-boosters/hacksaws"
repository = "https://gitlab.com/rocket-boosters/hacksaws"
documentation = "https://gitlab.com/rocket-boosters/hacksaws"
keywords = ["aws", "authentication"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Utilities"
]
exclude = ["hacksaws/tests"]

[tool.poetry.scripts]
hacksaws = 'hacksaws:console_main'

[tool.poetry.dependencies]
python = "^3.8.1"
boto3 = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
toml = "^0.10.1"
coverage = "^5.3"
lobotomy = "^0.1.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
